fix broken stylesheet

--- a/styles/style.css
+++ b/styles/style.css
@@ -14,8 +14,8 @@ ul {
   list-style-type: none;
 }
 
-#region header
-/* #headerPlaceholder {
+/* #region header */
+ /* #headerPlaceholder {
   max-height: var(--header-height);
 } */
 
